Horizontal overflow fix. Thanks @elainanatario

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -7,7 +7,7 @@ header {
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
-	width: 100vw;
+	width: 100%;
 	height: 98vh;
 
 	color: #fff;
@@ -37,7 +37,7 @@ footer {
 	background-blend-mode: multiply, multiply;
 	background-size: cover, cover;
 
-	width: 100vw;
+	width: 100%;
 	height: 100vh;
 
 	color: #fff;
